# freeradius-memcached

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure.ac  rlm_memcache_ops.c  rlm_memcached.c
cmake/modules/: FindLibfreeradius3.cmake  FindLibmemcached.cmake
